[gd_scene load_steps=3 format=3 uid="uid://dhdow8lmlc8yx"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_2q8kv"]
[ext_resource type="Theme" uid="uid://b0rikoqtewsdu" path="res://assets/themes/wedding_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_theme")
script = ExtResource("1_2q8kv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.98, 0.94, 0.96, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -150.0
offset_right = 125.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Mark & Jenny's
Wedding Adventure"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Quit"
